Professional portfolio with form in contact and other files

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@
             <div>
                 <ul>
                     <li>About me</li>
-                    <li>Projects</li>
+                    <a href="./Projects.html"><li>Projects</li></a>
                     <li>Contact</li>
                     <li><img alt="Esp" src="./images/spain_icon.png"/></li>
                     <li><img alt="Eng" src="./images/uk_icon.png"/></li>
@@ -23,6 +23,24 @@
         </div>
     </header>
     <main>
+        <div>
+            <img alt="My Photo" src="./images/ALYSON_C.jpg"/>
+        </div>
+        <div>
+            <h2>I'm Alyson Castiblanco</h2>
+            <p>I'm Mechatronics Engineer, with skills in 
+                Robotics, programming and electronics. Also, 
+                I'm passionated fullstack developer and Computer 
+                Science Teacher. Welcome to my site, and I'll show you
+                my work.</p>
+            <a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img alt="GitHub" src="./images/github_icon.svg"/></a>
+            <a target="_blank" href="./CV_CASTIBLANCO_CASTAÑEDA_ALYSON_VALERIA_ENGINEER_english.pdf"><img alt="CV" src="./images/pdf_icon.svg"/></a>
+            <ul>
+                <li><button onclick="location.href='./AboutMe.html'">About me</button></li>
+                <li><button onclick="location.href='./Projects.html'">My Projects</button></li>
+                <li><button>Contact</button></li>
+            </ul>
+        </div>
         <footer>
 
         </footer>
