Form with text area for message

--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,8 @@
         <input name="email" placeholder="Enter your email"/>
         <h5>Your subject</h5>
         <input name="subject" placeholder="What's your subject?"/>
+        <h5>Write your message</h5>
+        <textarea name="message" placeholder="Write your message here"></textarea>
         <input type="submit" name="Send"/>
     </form>
 </body>
