--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,47 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"/>
     <title>AlyDev- About me</title>
 </head>
 <body>
-    <header>
-        <div>
-            <h1>AlyDev</h1>
-            <div>
-                <ul>
-                    <li>About me</li>
-                    <a href="./Projects.html"><li>Projects</li></a>
-                    <li>Contact</li>
-                    <li><img alt="Esp" src="./images/spain_icon.png"/></li>
-                    <li><img alt="Eng" src="./images/uk_icon.png"/></li>
-                    <li><img alt="Por" src="./images/brazil_icon.png"></li>
-                </ul>
+    <!--We will use a container fluid to distribute all contents in 100% width.-->
+    <div class="container-fluid">
+        <header>
+            <!--Row that will contain the header-->
+            <div class="row">
+                <!--Column to put the logo-->
+                <div class="col-lg">
+                    <a href="./Homepage.html"><h1 class="h1" style="font-family: Arial, Helvetica, sans-serif; color: #F3F4F6FF;  font-weight: 700;">AlyDev</h1></a>
+                </div>
+                <!--Column to put the quick access bar menu-->
+                <div class="col-lg-4">
+                    <div class="header-menu">
+                        <a href="./AboutMe.html"><ul class="header-menu-item">About me</ul></a>
+                        <a href="./Projects.html"><ul class="header-menu-item">My Projects</ul></a>
+                        <a href="./Contact.html"><ul class="header-menu-item">Contact</ul></a>
+                        <ul class="header-menu-item"><img class="lang_icons" alt="Esp" src="./images/spain_icon.png"></img></ul>
+                        <a href="./Homepage.html"><ul class="header-menu-item"><img class="lang_icons" alt="Eng" src="./images/uk_icon.png"></img></ul></a>
+                        <ul class="header-menu-item"><img class="lang_icons" alt="Por" src="./images/brazil_icon.png"></img></ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <div>
-            <img alt="My Photo" src="./images/ALYSON_C.jpg"/>
-        </div>
-        <div>
-            <h2>I'm Alyson Castiblanco</h2>
-            <p>I'm Mechatronics Engineer, with skills in 
-                Robotics, programming and electronics. Also, 
-                I'm passionated fullstack developer and Computer 
-                Science Teacher. Welcome to my site, and I'll show you
-                my work.</p>
-            <a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img alt="GitHub" src="./images/github_icon.svg"/></a>
-            <a target="_blank" href="./CV_CASTIBLANCO_CASTAÑEDA_ALYSON_VALERIA_ENGINEER_english.pdf"><img alt="CV" src="./images/pdf_icon.svg"/></a>
-            <ul>
-                <li><button onclick="location.href='./AboutMe.html'">About me</button></li>
-                <li><button onclick="location.href='./Projects.html'">My Projects</button></li>
-                <li><button>Contact</button></li>
-            </ul>
-        </div>
-        <footer>
+        </header>
+        <main>
+ 
+            <footer>
+                <!--An additional row for the footer-->
+                <!--A flex box to adapt the content, with padding, contenf justified and aligned-->
+                <div class="d-flex flex-wrap justify-content-between align-items-stretch py-3 border-top">
+                    <!--Column for the email-->
+                    <div class="col-md-4 d-flex align-items-center">
+                        <ul>
+                            <li class="contactimageslist"><img class="footericons" alt="mail" src="./images/mail_icon.svg"/></li>
+                            <li class="contactimageslist"><p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">castiblanco.castaneda.alyson.val@gmail.com</p></li>
+                        </ul>              
+                    </div>
+                    <!--Column for social media-->
+                    <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                        <ul>
+                            <li class="contactimageslist"><a target="_blank" href="https://www.linkedin.com/in/alyson-valeria-castiblanco-casta%C3%B1eda/"><img class="footericons2" alt="Linkedin" src="./images/linkedin_icon.svg"/></li></a>
+                            <li class="contactimageslist"><a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img class="footericons2" alt="GitHub" src="./images/github_icon.svg"/></a></li>
+                        </ul>
+                    </div>
 
-        </footer>
-    </main>
-    
+                </div>
+            
+            </footer>
+        </main>
+    </div>
+
 </body>
 </html>
