Homepage fixed in aesthethics and first part from About me added

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -32,28 +32,47 @@
             </div>
         </header>
         <main>
- 
+            <br>
+            <!--h1 class from Bootstrap to customize the texts-->
+            <div><h1 class="h1" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">About me</h1></div>
+            <!--A row to put all items in the center. Will be the row that will 
+            store the content-->
+            <div class="row justify-content-around align-items-center">
+                <!--Column for the profile image-->
+                <div class="col-lg-5">
+                    <img class="profilehomepage" alt="My Photo" src="./images/WhatsApp Image 2024-12-23 at 10.54_edited.jpg"/>
+                </div>
+                <!--Column for the title, paragraph and links in general-->
+                <div class="col-lg-5">
+                    <!--Paragraph with class lead to cutomize the paragraph with responsive.-->
+                    <div>
+                        <p class="lead" style="  font-family: Inter; text-align: justify; font-weight: 400;color: #F3F4F6FF;">
+                            My name is Alyson Castiblanco, I'm a 
+                            Colombian Mechatronics Engineer, wtih 
+                            technical studies in Automation, Robotics and 
+                            Software Development. From 2021, I'm working 
+                            strongly in fullstack development freelance 
+                            projects, and also, I have experience in academic
+                            fields teaching Computer Science to people of all
+                            ages. Continue navigating if you want to know more</p>
+                    </div>
+            </div>
             <footer>
                 <!--An additional row for the footer-->
                 <!--A flex box to adapt the content, with padding, contenf justified and aligned-->
                 <div class="d-flex flex-wrap justify-content-between align-items-stretch py-3 border-top">
                     <!--Column for the email-->
                     <div class="col-md-4 d-flex align-items-center">
-                        <ul>
-                            <li class="contactimageslist"><img class="footericons" alt="mail" src="./images/mail_icon.svg"/></li>
-                            <li class="contactimageslist"><p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">castiblanco.castaneda.alyson.val@gmail.com</p></li>
-                        </ul>              
+                            <img class="footericons" alt="mail" src="./images/mail_icon.svg"/></li>
+                            <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 0;">castiblanco.castaneda.alyson.val@gmail.com</p>              
                     </div>
                     <!--Column for social media-->
                     <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                        <ul>
-                            <li class="contactimageslist"><a target="_blank" href="https://www.linkedin.com/in/alyson-valeria-castiblanco-casta%C3%B1eda/"><img class="footericons2" alt="Linkedin" src="./images/linkedin_icon.svg"/></li></a>
-                            <li class="contactimageslist"><a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img class="footericons2" alt="GitHub" src="./images/github_icon.svg"/></a></li>
-                        </ul>
+                        <a target="_blank" href="https://www.linkedin.com/in/alyson-valeria-castiblanco-casta%C3%B1eda/"><img class="footericons" alt="Linkedin" src="./images/linkedin_icon.svg"/></a>
+                        <a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img class="footericons" alt="GitHub" src="./images/github_icon.svg"/></a>
                     </div>
 
-                </div>
-            
+                </div>            
             </footer>
         </main>
     </div>
