--- a/Contact.html
+++ b/Contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css"/>
     <title>AlyDev- Contact</title>
 </head>
 <body>
     <form action="" method="get">
-        <h5>Name and lastname</h5>
+        <h5 class="hometitle">Name and lastname</h5>
         <input name="name" placeholder="Enter your name and lastname"/>
         <h5>Your email</h5>
         <input name="email" placeholder="Enter your email"/>
