Education timeline and languages section in About Me added

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,6 +56,56 @@
                             fields teaching Computer Science to people of all
                             ages. Continue navigating if you want to know more</p>
                     </div>
+                </div>
+            </div>
+            <div><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">My Education</h1></div>
+            <div class="row" style="border-bottom: 3px solid #ffffff; margin-left: 1%; margin-right: 1%;">
+                <div class="col">
+                    <img class="book" alt="icon" src="./images/book-bookmark-regular-24.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Colombian High School Diploma</p>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2014</p>
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                    <img class="utp" alt="icon" src="./images/utp.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">General Education Degree in Software development</p>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2021</p>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                    <img class="ecci" alt="icon" src="./images/ecci.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Associate Degree Automation and industrial robotics</p>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2018</p>
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                    <img class="ecci" alt="icon" src="./images/ecci.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Mechatronics Engineering Bachelor</p>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2022</p>
+                </div>
+            </div>
+            <div><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">Languages that I can speak</h1></div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <img class="languageimg" alt="spanish" src="./images/spain_icon.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Native competence</p>
+                </div>
+                <div class="col">
+                    <img class="languageimg" alt="english" src="./images/uk_icon.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Professional competence (B2)</p>
+                </div>
+                <div class="col">
+                    <img class="languageimg" alt="portuguese" src="./images/brazil_icon.png"/>
+                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Beginner- intermediate level</p>
+                </div>
+
             </div>
             <footer>
                 <!--An additional row for the footer-->
