--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,9 +56,16 @@
                             fields teaching Computer Science to people of all
                             ages. Continue navigating if you want to know more</p>
                     </div>
+                    <div class="row row-cols-3">
+                        <!--The same principle with buttons-->
+                            <!--Creating buttons with tag "button"-->
+                            <div class="col"><button class="buttoncontact" onclick="location.href='#education'">Education</button></div>
+                            <div class="col"><button class="buttoncontact" onclick="location.href='.#'">Experiences</button></div>
+                            <div class="col"><button class="buttoncontact" onclick="location.href='#languages'">Languages</button></div>
+                      </div>              
                 </div>
             </div>
-            <div><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">My Education</h1></div>
+            <div id="education"><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">My Education</h1></div>
             <div class="row" style="border-bottom: 3px solid #ffffff; margin-left: 1%; margin-right: 1%;">
                 <div class="col">
                     <img class="book" alt="icon" src="./images/book-bookmark-regular-24.png"/>
@@ -91,7 +98,7 @@
                     <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2022</p>
                 </div>
             </div>
-            <div><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">Languages that I can speak</h1></div>
+            <div id="languages"><h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">Languages that I can speak</h1></div>
             <div class="row align-items-center">
                 <div class="col">
                     <img class="languageimg" alt="spanish" src="./images/spain_icon.png"/>
